--- a/lib/libft/makefile
+++ b/lib/libft/makefile
@@ -3,15 +3,15 @@
 #                                                         :::      ::::::::    #
 #    makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: rtamouss <rtamouss@student.42.fr>          +#+  +:+       +#+         #
+#    By: akrid <akrid@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/11/15 21:37:56 by rtamouss          #+#    #+#              #
-#    Updated: 2024/05/05 16:28:50 by rtamouss         ###   ########.fr        #
+#    Updated: 2024/06/08 13:57:52 by akrid            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CC = cc
-CFLAGS = -Wall -Wextra -Werror
+CFLAGS = -Wall -Wextra -Werror -fPIC
 SRCS = ft_atoi.c ft_isalnum.c ft_isdigit.c ft_memcmp.c  ft_strchr.c  ft_strlcat.c ft_strncmp.c ft_substr.c \
 ft_bzero.c   ft_isalpha.c ft_isprint.c ft_memcpy.c  ft_strdup.c  ft_strlcpy.c ft_strnstr.c ft_tolower.c \
 ft_calloc.c  ft_isascii.c ft_memchr.c  ft_memset.c  ft_strjoin.c ft_strlen.c  ft_strrchr.c ft_toupper.c ft_split.c ft_itoa.c \
